data/all_generated_tests/raw_wast_tests/loop_IncorrectHandlingofControlFlowAcrossModuleBoundaries_1241.wast
;; 2. **Test: Loop with Conditional Branch to Exported Function**    Description: Construct a loop wherein a `br_if` conditionally branches to a function exported from another module. Ensure that control flow to the exported function is correctly managed and execution resumes within the loop afterward.    Constraints:     - Verify that the context and operand stack are maintained.    - Ensure the imported function correctly handles results.    - Validate the consistency of branch conditions across module boundaries.

(assert_invalid
  (module
    (import "env" "external_func" (func $external_func (result i32)))
    (func $loop_conditional_branch
      (i32.const 1)
      (loop (result i32)
        (br_if 0
          (call $external_func)
        )
      )
    )
  )
  "type mismatch"
)